--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,7 @@ services:
     read_only: true
     tmpfs:
       - /tmp
+      - /home/ocruser
 
   celery-worker:
     build:
@@ -100,6 +101,7 @@ services:
     read_only: true
     tmpfs:
       - /tmp
+      - /home/ocruser
 
   # Optional: Add nginx reverse proxy for production
   nginx:
