--- a/env.example
+++ b/env.example
@@ -12,6 +12,14 @@ OCR_LANG=en
 USE_GPU=false
 USE_PP_OCR_V5_SERVER=true
 
+# PaddleOCR v5 Performance Settings (Optimized for 24GB VPS)
+USE_ANGLE_CLS=true              # Enable angle classification for rotated text
+DET_LIMIT_SIDE_LEN=1280         # Detection limit: 960 (fast), 1280 (balanced), 1920 (accurate)
+REC_BATCH_NUM=8                 # Batch size: 6 (8GB), 8 (24GB), 12 (32GB+)
+DET_DB_THRESH=0.3               # Detection threshold (0.1-0.5, lower = more detections)
+DET_DB_BOX_THRESH=0.6           # Box threshold (0.3-0.9, higher = stricter filtering)
+DROP_SCORE=0.5                  # Minimum confidence score (0.0-1.0)
+
 # Redis Configuration
 REDIS_URL=redis://localhost:6379/0
 REDIS_CACHE_TTL=3600
