--- a/nginx.conf
+++ b/nginx.conf
@@ -39,6 +39,9 @@ http {
         application/atom+xml
         image/svg+xml;
 
+    # Rate limiting zone - 10 requests per minute per IP
+    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/m;
+
     upstream ocr_backend {
         server ocr-microservice:5000;
     }
