--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,15 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
-    command: redis-server --appendonly yes
+    command: redis-server --appendonly yes --maxmemory 2gb --maxmemory-policy allkeys-lru
+    deploy:
+      resources:
+        limits:
+          memory: 2G
+          cpus: '1.0'
+        reservations:
+          memory: 512M
+          cpus: '0.5'
 
   ocr-microservice:
     build:
@@ -30,6 +38,10 @@ services:
       - DEBUG=false
       - OCR_LANG=en
       - USE_GPU=false
+      - USE_PP_OCR_V5_SERVER=true
+      - USE_ANGLE_CLS=true
+      - DET_LIMIT_SIDE_LEN=1280
+      - REC_BATCH_NUM=8
       - MAX_CONTENT_LENGTH=52428800
       - SECRET_KEY=${SECRET_KEY:-change-this-in-production}
       - LOG_LEVEL=INFO
@@ -39,7 +51,7 @@ services:
       - RATE_LIMIT_PER_MINUTE=10
     volumes:
       - ocr_uploads:/tmp/ocr_uploads
-      - ./logs:/app/logs  # Mount logs directory for persistent logging
+      - logs_data:/app/logs  # Use named volume instead of bind mount for read-only compatibility
     restart: unless-stopped
     depends_on:
       - redis
@@ -54,11 +66,11 @@ services:
     deploy:
       resources:
         limits:
-          memory: 4G
-          cpus: '2.0'
+          memory: 8G  # Increased for 24GB VPS - handles multiple concurrent API requests
+          cpus: '4.0'  # More CPU for faster OCR processing
         reservations:
-          memory: 1G
-          cpus: '1.0'
+          memory: 2G
+          cpus: '2.0'
     security_opt:
       - no-new-privileges:true
     read_only: true
@@ -73,14 +85,18 @@ services:
       - FLASK_ENV=production
       - OCR_LANG=en
       - USE_GPU=false
+      - USE_PP_OCR_V5_SERVER=true
+      - USE_ANGLE_CLS=true
+      - DET_LIMIT_SIDE_LEN=1280
+      - REC_BATCH_NUM=8
       - REDIS_URL=redis://redis:6379/0
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
       - LOG_LEVEL=INFO
-    command: celery -A celery_app worker --loglevel=info --concurrency=2
+    command: celery -A celery_app worker --loglevel=info --concurrency=4
     volumes:
       - ocr_uploads:/tmp/ocr_uploads
-      - ./logs:/app/logs
+      - logs_data:/app/logs  # Use named volume for consistency
     restart: unless-stopped
     depends_on:
       - redis
@@ -90,11 +106,11 @@ services:
     deploy:
       resources:
         limits:
-          memory: 4G
-          cpus: '2.0'
+          memory: 10G  # Increased for 24GB VPS - handles async batch processing
+          cpus: '4.0'  # More CPU for parallel processing
         reservations:
-          memory: 1G
-          cpus: '1.0'
+          memory: 3G
+          cpus: '2.0'
     security_opt:
       - no-new-privileges:true
     read_only: true
@@ -102,6 +118,8 @@ services:
       - /tmp
 
   # Optional: Add nginx reverse proxy for production
+  # To start nginx, use: docker-compose --profile production up
+  # Or remove the 'profiles' section below to always start nginx
   nginx:
     image: nginx:alpine
     ports:
@@ -113,6 +131,14 @@ services:
     networks:
       - ocr_network
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '0.5'
+        reservations:
+          memory: 128M
+          cpus: '0.25'
     profiles:
       - production
 
@@ -120,6 +146,8 @@ volumes:
   ocr_uploads:
     driver: local
   redis_data:
+    driver: local
+  logs_data:
     driver: local
 
 networks:
