--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   redis:
     image: redis:7-alpine
@@ -32,6 +30,7 @@ services:
     ports:
       - "5000:5000"
     environment:
+      - HOME=/tmp
       - FLASK_ENV=production
       - PORT=5000
       - HOST=0.0.0.0
@@ -82,6 +81,7 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
+      - HOME=/tmp
       - FLASK_ENV=production
       - OCR_LANG=en
       - USE_GPU=false
