--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,6 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - HOME=/tmp
       - FLASK_ENV=production
       - PORT=5000
       - HOST=0.0.0.0
@@ -51,7 +50,7 @@ services:
     volumes:
       - ocr_uploads:/tmp/ocr_uploads
       - logs_data:/app/logs  # Use named volume instead of bind mount for read-only compatibility
-      - paddlex_models:/tmp/.paddlex  # Persist PaddleOCR models across restarts
+      - paddlex_models:/home/ocruser/.paddlex  # Persist PaddleOCR models across restarts
     restart: unless-stopped
     depends_on:
       - redis
@@ -82,7 +81,6 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
-      - HOME=/tmp
       - FLASK_ENV=production
       - OCR_LANG=en
       - USE_GPU=false
@@ -98,7 +96,7 @@ services:
     volumes:
       - ocr_uploads:/tmp/ocr_uploads
       - logs_data:/app/logs  # Use named volume for consistency
-      - paddlex_models:/tmp/.paddlex  # Persist PaddleOCR models across restarts
+      - paddlex_models:/home/ocruser/.paddlex  # Persist PaddleOCR models across restarts
     restart: unless-stopped
     depends_on:
       - redis
