--- a/env.example
+++ b/env.example
@@ -21,7 +21,9 @@ DET_DB_BOX_THRESH=0.6           # Box threshold (0.3-0.9, higher = stricter filt
 DROP_SCORE=0.5                  # Minimum confidence score (0.0-1.0)
 
 # Redis Configuration
-REDIS_URL=redis://localhost:6379/0
+# SECURITY: Set a strong password for production (minimum 32 characters)
+REDIS_PASSWORD=change-this-redis-password-in-production
+REDIS_URL=redis://:${REDIS_PASSWORD}@localhost:6379/0
 REDIS_CACHE_TTL=3600
 
 # Celery Configuration
