--- a/nginx.conf
+++ b/nginx.conf
@@ -39,23 +39,62 @@ http {
         application/atom+xml
         image/svg+xml;
 
-    # Rate limiting zone - 10 requests per minute per IP
+    # Rate limiting zones
     limit_req_zone $binary_remote_addr zone=api:10m rate=10r/m;
+    limit_req_zone $binary_remote_addr zone=api_burst:10m rate=30r/m;
+    
+    # Connection limiting (DDoS protection)
+    limit_conn_zone $binary_remote_addr zone=conn_limit_per_ip:10m;
+
+    # Hide nginx version
+    server_tokens off;
 
     upstream ocr_backend {
         server ocr-microservice:5000;
+        keepalive 32;
     }
 
     server {
         listen 80;
-        server_name localhost;
+        server_name _;  # Accept any hostname (use actual domain in production)
+        
+        # SECURITY: Request size limits
+        client_max_body_size 50M;
+        client_body_buffer_size 128k;
+        client_header_buffer_size 1k;
+        large_client_header_buffers 4 16k;
+        
+        # SECURITY: Timeouts to prevent slowloris attacks
+        client_body_timeout 10s;
+        client_header_timeout 10s;
+        keepalive_timeout 65;
+        send_timeout 10s;
 
-        # Security headers
+        # SECURITY: Enhanced security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
-        add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        # SECURITY: Stricter CSP - removed 'unsafe-inline' for better security
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:; font-src 'self' data:; connect-src 'self';" always;
+        add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
+        
+        # SECURITY: HSTS (HTTP Strict Transport Security) - enable when using HTTPS
+        # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+        
+        # SECURITY: Block common attack paths
+        location ~ /\. {
+            deny all;
+            access_log off;
+            log_not_found off;
+        }
+        
+        location ~ ^/(\.git|\.env|\.htaccess|\.htpasswd|wp-admin|phpmyadmin|admin) {
+            deny all;
+            access_log off;
+            log_not_found off;
+            return 404;
+        }
 
         # Health check endpoint (no auth required)
         location /health {
@@ -66,18 +105,33 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # SECURITY: Block invalid HTTP methods
+        if ($request_method !~ ^(GET|POST|HEAD|OPTIONS)$) {
+            return 405;
+        }
+
         # API endpoints
         location / {
-            # Rate limiting
+            # SECURITY: Rate limiting with connection limits
             limit_req zone=api burst=10 nodelay;
             limit_req_status 429;
+            limit_conn conn_limit_per_ip 10;
 
             proxy_pass http://ocr_backend;
+            
+            # SECURITY: Prevent header injection
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            # SECURITY: Use real IP, don't trust X-Forwarded-For (can be spoofed)
+            proxy_set_header X-Forwarded-For $remote_addr;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Request-ID $request_id;
+            
+            # SECURITY: Remove sensitive headers
+            proxy_set_header X-Forwarded-Server "";
+            proxy_hide_header X-Powered-By;
+            proxy_hide_header Server;
 
             # Timeout settings
             proxy_connect_timeout 30s;
