--- a/redis.conf
+++ b/redis.conf
@@ -19,7 +19,7 @@ bind 127.0.0.1
 protected-mode yes
 
 # Require authentication (password will be set via command line)
-# This is handled via --requirepass in docker-compose.yml
+# This is handled via --requirepass in docker compose.yml
 
 # Memory management
 maxmemory 2gb
