--- a/env.example
+++ b/env.example
@@ -33,6 +33,11 @@ CELERY_RESULT_BACKEND=redis://localhost:6379/0
 # Rate Limiting Configuration
 RATE_LIMIT_PER_MINUTE=10
 
+# API Key Authentication
+# SECURITY: API key required for /ocr/* endpoints (health endpoints excluded)
+# Set this to a strong random token in production
+AUTH_TOKEN=1QHRD48KoetalQhxg14KwMe1MKjRw7Mbj9BwlBUm74M=
+
 # File Upload Configuration
 MAX_CONTENT_LENGTH=52428800  # 50MB in bytes
 UPLOAD_FOLDER=/tmp/ocr_uploads
