--- a/nginx.conf
+++ b/nginx.conf
@@ -54,9 +54,22 @@ http {
         keepalive 32;
     }
 
+    # HTTPS Server
     server {
-        listen 80;
-        server_name _;  # Accept any hostname (use actual domain in production)
+        listen 443 ssl http2;
+        server_name api.eusdr.com;  # Replace with your actual domain
+        
+        # SSL Certificate paths
+        ssl_certificate /etc/nginx/ssl/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+        
+        # SSL Configuration
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
+        ssl_prefer_server_ciphers off;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+        ssl_session_tickets off;
         
         # SECURITY: Request size limits
         client_max_body_size 50M;
@@ -75,12 +88,11 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-        # SECURITY: Stricter CSP - removed 'unsafe-inline' for better security
         add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:; font-src 'self' data:; connect-src 'self';" always;
         add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
         
-        # SECURITY: HSTS (HTTP Strict Transport Security) - enable when using HTTPS
-        # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+        # SECURITY: HSTS (HTTP Strict Transport Security)
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
         
         # SECURITY: Block common attack paths
         location ~ /\. {
@@ -122,7 +134,6 @@ http {
             # SECURITY: Prevent header injection
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            # SECURITY: Use real IP, don't trust X-Forwarded-For (can be spoofed)
             proxy_set_header X-Forwarded-For $remote_addr;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $host;
@@ -136,13 +147,29 @@ http {
             # Timeout settings
             proxy_connect_timeout 30s;
             proxy_send_timeout 30s;
-            proxy_read_timeout 300s;  # Longer timeout for OCR processing
+            proxy_read_timeout 300s;
 
             # Buffer settings for large responses
             proxy_buffering on;
             proxy_buffer_size 128k;
             proxy_buffers 4 256k;
             proxy_busy_buffers_size 256k;
+        }
+    }
+
+    # HTTP to HTTPS Redirect
+    server {
+        listen 80;
+        server_name api.eusdr.com ;  # Replace with your actual domain
+        
+        # Allow Let's Encrypt validation
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+        
+        # Redirect all other traffic to HTTPS
+        location / {
+            return 301 https://$server_name$request_uri;
         }
     }
 }
