--- a/nginx.conf
+++ b/nginx.conf
@@ -56,12 +56,13 @@ http {
 
     # HTTPS Server
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
+        http2 on;
         server_name api.eusdr.com;  # Replace with your actual domain
         
-        # SSL Certificate paths
-        ssl_certificate /etc/nginx/ssl/fullchain.pem;
-        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+        # SSL Certificate paths (mounted from /etc/letsencrypt)
+        ssl_certificate /etc/letsencrypt/live/api.eusdr.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/api.eusdr.com/privkey.pem;
         
         # SSL Configuration
         ssl_protocols TLSv1.2 TLSv1.3;
