--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,10 +58,12 @@ services:
       - MAX_CONTENT_LENGTH=52428800
       - SECRET_KEY=${SECRET_KEY:-change-this-in-production}
       - LOG_LEVEL=DEBUG
-      # REDIS_URL will be constructed in Python with proper URL encoding for special characters
-      # Do NOT set REDIS_URL here - let config.py handle URL encoding of password
+      # Use REDIS_URL directly from environment if set, otherwise construct from REDIS_PASSWORD
+      # If REDIS_URL is set in your shell, it will be used directly
+      # Format: redis://:password@redis:6379/0
+      - REDIS_URL=${REDIS_URL:-redis://:${REDIS_PASSWORD}@redis:6379/0}
       - REDIS_PASSWORD=${REDIS_PASSWORD:-change-this-redis-password-in-production}
-      # CELERY_BROKER_URL and CELERY_RESULT_BACKEND will automatically use REDIS_URL from config.py
+      # CELERY_BROKER_URL and CELERY_RESULT_BACKEND will use REDIS_URL from config.py
       - RATE_LIMIT_PER_MINUTE=10
       # SECURITY: API key authentication - required for /ocr/* endpoints
       - AUTH_TOKEN=${AUTH_TOKEN:-1QHRD48KoetalQhxg14KwMe1MKjRw7Mbj9BwlBUm74M=}
@@ -110,10 +112,10 @@ services:
       - USE_ANGLE_CLS=true
       - DET_LIMIT_SIDE_LEN=1280
       - REC_BATCH_NUM=8
-      # REDIS_URL will be constructed in Python with proper URL encoding for special characters
-      # Do NOT set REDIS_URL here - let config.py handle URL encoding of password
+      # Use REDIS_URL directly from environment if set, otherwise construct from REDIS_PASSWORD
+      - REDIS_URL=${REDIS_URL:-redis://:${REDIS_PASSWORD}@redis:6379/0}
       - REDIS_PASSWORD=${REDIS_PASSWORD:-change-this-redis-password-in-production}
-      # CELERY_BROKER_URL and CELERY_RESULT_BACKEND will automatically use REDIS_URL from config.py
+      # CELERY_BROKER_URL and CELERY_RESULT_BACKEND will use REDIS_URL from config.py
       - LOG_LEVEL=DEBUG
       # SECURITY: API key authentication - required for /ocr/* endpoints
       - AUTH_TOKEN=${AUTH_TOKEN:-1QHRD48KoetalQhxg14KwMe1MKjRw7Mbj9BwlBUm74M=}
