--- a/vps-config.env
+++ b/vps-config.env
@@ -16,12 +16,26 @@ USE_GPU=false
 USE_PP_OCR_V5_SERVER=true
 
 # Redis Configuration
-REDIS_URL=redis://redis:6379/0
+# Option 1: Direct connection parameters (preferred - avoids URL parsing issues)
+# SECURITY: Set a strong password for production (minimum 32 characters)
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_USERNAME=default
+REDIS_PASSWORD=change-this-redis-password-in-production
+REDIS_DB=0
+
+# Option 2: URL-based connection (fallback for backward compatibility)
+# If REDIS_URL is set, it will be used instead of individual parameters
+# Format: redis://:password@host:port/db or redis://username:password@host:port/db
+# REDIS_URL=redis://:change-this-redis-password-in-production@redis:6379/0
+
 REDIS_CACHE_TTL=3600
 
 # Celery Configuration
-CELERY_BROKER_URL=redis://redis:6379/0
-CELERY_RESULT_BACKEND=redis://redis:6379/0
+# Celery will automatically use the centralized Redis connection manager
+# These can be overridden if needed, but typically not required
+# CELERY_BROKER_URL=redis://redis:6379/0
+# CELERY_RESULT_BACKEND=redis://redis:6379/0
 
 # Rate Limiting Configuration
 RATE_LIMIT_PER_MINUTE=10
