--- a/env.example
+++ b/env.example
@@ -21,14 +21,26 @@ DET_DB_BOX_THRESH=0.6           # Box threshold (0.3-0.9, higher = stricter filt
 DROP_SCORE=0.5                  # Minimum confidence score (0.0-1.0)
 
 # Redis Configuration
+# Option 1: Direct connection parameters (preferred - avoids URL parsing issues)
 # SECURITY: Set a strong password for production (minimum 32 characters)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_USERNAME=default
 REDIS_PASSWORD=change-this-redis-password-in-production
-REDIS_URL=redis://:${REDIS_PASSWORD}@localhost:6379/0
+REDIS_DB=0
+
+# Option 2: URL-based connection (fallback for backward compatibility)
+# If REDIS_URL is set, it will be used instead of individual parameters
+# Format: redis://:password@host:port/db or redis://username:password@host:port/db
+# REDIS_URL=redis://:change-this-redis-password-in-production@localhost:6379/0
+
 REDIS_CACHE_TTL=3600
 
 # Celery Configuration
-CELERY_BROKER_URL=redis://localhost:6379/0
-CELERY_RESULT_BACKEND=redis://localhost:6379/0
+# Celery will automatically use the centralized Redis connection manager
+# These can be overridden if needed, but typically not required
+# CELERY_BROKER_URL=redis://localhost:6379/0
+# CELERY_RESULT_BACKEND=redis://localhost:6379/0
 
 # Rate Limiting Configuration
 RATE_LIMIT_PER_MINUTE=10
