--- a/vps-config.env
+++ b/vps-config.env
@@ -1,5 +1,6 @@
-# VPS 8GB RAM Optimized Configuration
+# VPS 24GB RAM Optimized Configuration
 # Copy this to .env for VPS deployment
+# Optimized for 24GB RAM VPS with proper resource utilization
 
 # Flask Configuration
 FLASK_ENV=production
@@ -10,7 +11,7 @@ DEBUG=false
 HOST=0.0.0.0
 PORT=5000
 
-# OCR Configuration - Optimized for 8GB VPS
+# OCR Configuration - Optimized for 24GB RAM VPS
 OCR_LANG=en
 USE_GPU=false
 USE_PP_OCR_V5_SERVER=true
@@ -18,16 +19,16 @@ USE_PP_OCR_V5_SERVER=true
 # Redis Configuration
 # Option 1: Direct connection parameters (preferred - avoids URL parsing issues)
 # SECURITY: Set a strong password for production (minimum 32 characters)
-REDIS_HOST=redis
-REDIS_PORT=6379
-REDIS_USERNAME=default
-REDIS_PASSWORD=change-this-redis-password-in-production
+REDIS_HOST=redis-11320.crce175.eu-north-1-1.ec2.cloud.redislabs.com                    
+REDIS_PORT=11320                     # Redis port
+REDIS_USERNAME=default              # Redis username (usually 'default')
+REDIS_PASSWORD=8yi9kXO9hIdmFRIg1FiQch7mZoQvbnHu 
 REDIS_DB=0
 
 # Option 2: URL-based connection (fallback for backward compatibility)
 # If REDIS_URL is set, it will be used instead of individual parameters
 # Format: redis://:password@host:port/db or redis://username:password@host:port/db
-# REDIS_URL=redis://:change-this-redis-password-in-production@redis:6379/0
+REDIS_URL=redis://default:8yi9kXO9hIdmFRIg1FiQch7mZoQvbnHu@redis-11320.crce175.eu-north-1-1.ec2.cloud.redislabs.com:11320
 
 REDIS_CACHE_TTL=3600
 
@@ -40,24 +41,32 @@ REDIS_CACHE_TTL=3600
 # Rate Limiting Configuration
 RATE_LIMIT_PER_MINUTE=10
 
-# File Upload Configuration - Optimized for VPS
-MAX_CONTENT_LENGTH=26214400  # 25MB (reduced for VPS)
+# PaddleOCR v5 Performance Settings (Optimized for 24GB RAM)
+USE_ANGLE_CLS=true              # Enable angle classification for rotated text
+DET_LIMIT_SIDE_LEN=1280         # Detection limit: 1280 (balanced accuracy/performance)
+REC_BATCH_NUM=8                 # Batch size: 8 (optimized for 24GB RAM)
+DET_DB_THRESH=0.3               # Detection threshold (0.1-0.5, lower = more detections)
+DET_DB_BOX_THRESH=0.6           # Box threshold (0.3-0.9, higher = stricter filtering)
+DROP_SCORE=0.5                  # Minimum confidence score (0.0-1.0)
+
+# File Upload Configuration - Optimized for 24GB RAM VPS
+MAX_CONTENT_LENGTH=52428800  # 50MB (can handle larger files)
 UPLOAD_FOLDER=/tmp/ocr_uploads
 
-# Image Processing Limits - Conservative for VPS
-MAX_IMAGE_WIDTH=3072  # Reduced from 4096
-MAX_IMAGE_HEIGHT=3072  # Reduced from 4096
+# Image Processing Limits - Optimized for 24GB RAM
+MAX_IMAGE_WIDTH=4096  # Full resolution support
+MAX_IMAGE_HEIGHT=4096  # Full resolution support
 
-# PDF Processing Limits - Conservative for VPS
-MAX_PDF_SIZE=26214400   # 25MB (reduced from 50MB)
-MAX_PDF_PAGES=50        # Reduced from 100
-DEFAULT_DPI=200         # Reduced from 300 (faster processing)
-MAX_DPI=400             # Reduced from 600
+# PDF Processing Limits - Optimized for 24GB RAM
+MAX_PDF_SIZE=52428800   # 50MB (can handle larger PDFs)
+MAX_PDF_PAGES=100        # More pages supported
+DEFAULT_DPI=300         # Higher quality default
+MAX_DPI=600             # Maximum quality support
 MIN_DPI=72
 
-# Performance Settings - Optimized for 8GB VPS
-MAX_WORKERS=2           # Reduced for memory efficiency
-REQUEST_TIMEOUT=180     # 3 minutes (reduced from 5)
+# Performance Settings - Optimized for 24GB RAM VPS
+MAX_WORKERS=2           # Balance parallelism and memory (optimized for 24GB RAM)
+REQUEST_TIMEOUT=300     # 5 minutes (standard timeout)
 
 # Logging Configuration
 LOG_LEVEL=INFO
